First subcases evaluted

--- a/cigreTB880_case01.ipynb
+++ b/cigreTB880_case01.ipynb
@@ -322,112 +322,13 @@
    },
    "source": [
     "## 4.5 case #0-1: Results dependent on the temperature\n",
-    "### 4.5.1  Results linked to the maximum operating temperature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "8b287862-3568-4a4f-b6d8-b6398b1f3617",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R' = 3.6085330000E-05 W/m\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4.5.1.1 DC resistance of conductor\n",
-    "\n",
-    "R_prime = R_0*(1+alpha_20*(theta_c_max-20)) #[Ohm/m] From IEC 60287-1-1 Section 2.1.1\n",
-    "print(\"R' = %.10E W/m\" % R_prime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "27121389-69c7-4154-86fb-a20b01550c2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xs = 1.8661201029\n",
-      "ys = 0.0601241268\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4.5.1.2 Skin effect factor\n",
-    "\n",
-    "x_s = mt.sqrt(8*mt.pi*f/R_prime*1e-7*k_s) # From IEC 60287-1-1 Section 2.1.2\n",
-    "\n",
-    "# For 0 < x_s <= 2,8\n",
-    "y_s = x_s**4/(192+0.8*x_s**4)\n",
-    "print(\"xs = %.10f\\nys = %.10f\" % (x_s, y_s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "cf6b293a-de39-41db-a7c5-560ae14de8fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xp = 1.8661201029\n",
-      "yp = 0.0351000648\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4.5.1.3 Proximity effect factor \n",
-    "\n",
-    "x_p = mt.sqrt(8*mt.pi*f/R_prime*1e-7*k_p) # From IEC 60287-1-1 Section 2.1.4.1\n",
-    "\n",
-    "d_c = dia[0]\n",
-    "y_p = x_p**4/(192+0.8*x_p**4)*(d_c/s)**2*(0.312*(d_c/s)**2+1.18/(x_p**4/(192+0.8*x_p**4)+0.27))\n",
-    "print(\"xp = %.10f\\nyp = %.10f\" % (x_p, y_p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "df4be765-9699-4add-8062-74e57e16b117",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R = 3.9521526380E-05 Ohm/m\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4.5.1.4 AC resistance of conductor \n",
-    "\n",
-    "R = R_prime*(1+y_s+y_p) #[Ohm/m] From IEC 60287-1-1 Section 2.1\n",
-    "print(\"R = %.10E Ohm/m\" % R)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "762bcc84-34f6-48ac-9308-222e53a0b4d8",
-   "metadata": {},
-   "source": [
+    "### 4.5.1  Results linked to the maximum operating temperature\n",
     "### 4.5.2 First iteration & 4.5.3 Next iterations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "871b93a1-733c-4503-abc3-37f9555caa4c",
    "metadata": {},
    "outputs": [
@@ -436,6 +337,7 @@
      "output_type": "stream",
      "text": [
       "Iteration:  1\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0727239574E-04 Ohm/m\n",
       "λ1 = 0.2928142510\n",
       "I = 822.0666849587 A\n",
@@ -445,6 +347,7 @@
       "θs = 78.7050517428 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  2\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640133734E-04 Ohm/m\n",
       "λ1 = 0.2939111934\n",
       "I = 821.7745414009 A\n",
@@ -454,6 +357,7 @@
       "θs = 78.7130207878 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  3\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640669779E-04 Ohm/m\n",
       "λ1 = 0.2939044196\n",
       "I = 821.7763444974 A\n",
@@ -463,6 +367,7 @@
       "θs = 78.7129716119 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  4\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640666471E-04 Ohm/m\n",
       "λ1 = 0.2939044614\n",
       "I = 821.7763333709 A\n",
@@ -472,6 +377,7 @@
       "θs = 78.7129719153 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  5\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640666491E-04 Ohm/m\n",
       "λ1 = 0.2939044611\n",
       "I = 821.7763334396 A\n",
@@ -481,6 +387,7 @@
       "θs = 78.7129719134 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  6\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640666491E-04 Ohm/m\n",
       "λ1 = 0.2939044611\n",
       "I = 821.7763334392 A\n",
@@ -490,6 +397,7 @@
       "θs = 78.7129719135 °C\n",
       "θc = 90.0000000000 °C\n",
       "Iteration:  7\n",
+      "R = 3.9521526380E-05 Ohm/m\n",
       "Rs = 2.0640666491E-04 Ohm/m\n",
       "λ1 = 0.2939044611\n",
       "I = 821.7763334392 A\n",
@@ -510,16 +418,17 @@
     "\n",
     "# Other parameters\n",
     "n = 1 # Single-core cable\n",
+    "d_c = dia[0] # Conductor diameter\n",
     "lambda_2 = 0 # The cable is unarmoured\n",
     "T2 = 0 # The cable is unarmoured\n",
     "# NOTE: IEC ArmoUred Cable is not the same that NEC(NFPA 70) Armored Cable (Type AC - Article 320), which is similar to Metal-Clad Cable (Type MC Article 330)\n",
     "\n",
     "# Variable Preallocation\n",
-    "#TODO: Incluir R en el for\n",
+    "R = [0]*maxIte #[Ohm/m] AC resistance of conductor\n",
     "R_s = [0]*maxIte #[Ohm/m] Resistance of sheath\n",
     "lambda_1 = [0]*maxIte # Loss factor\n",
     "I = [0]*maxIte #[A] Current rating\n",
-    "W_c = [0]*maxIte #[W/m] Conductor losses \n",
+    "W_c = [0]*maxIte #[W/m] Conductor losses\n",
     "W_s = [0]*maxIte #[W/m] Sheath losses\n",
     "theta_c = [0]*maxIte #[°C] Conductor operation temperature\n",
     "theta_s = [0]*maxIte #[°C] Sheath temperature\n",
@@ -530,23 +439,44 @@
     "\n",
     "for i in range(maxIte):\n",
     "    print(\"Iteration: %2d\" % (i+1))\n",
+    "    # 4.5.1  Results linked to the maximum operating temperature\n",
+    "    # 4.5.1.1 DC resistance of conductor\n",
+    "    R_prime = R_0*(1+alpha_20*(theta_c[i]-20)) #[Ohm/m] From IEC 60287-1-1 Section 2.1.1\n",
+    "    #print(\"R' = %.10E W/m\" % R_prime)\n",
+    "    \n",
+    "    # 4.5.1.2 Skin effect factor\n",
+    "    x_s = mt.sqrt(8*mt.pi*f/R_prime*1e-7*k_s) # From IEC 60287-1-1 Section 2.1.2\n",
+    "    # For 0 < x_s <= 2,8\n",
+    "    y_s = x_s**4/(192+0.8*x_s**4)\n",
+    "    #print(\"xs = %.10f\\nys = %.10f\" % (x_s, y_s))\n",
+    "    \n",
+    "    # 4.5.1.3 Proximity effect factor \n",
+    "    x_p = mt.sqrt(8*mt.pi*f/R_prime*1e-7*k_p) # From IEC 60287-1-1 Section 2.1.4.1\n",
+    "    y_p = x_p**4/(192+0.8*x_p**4)*(d_c/s)**2*(0.312*(d_c/s)**2+1.18/(x_p**4/(192+0.8*x_p**4)+0.27))\n",
+    "    #print(\"xp = %.10f\\nyp = %.10f\" % (x_p, y_p))\n",
+    "    \n",
+    "    # 4.5.1.4 AC resistance of conductor \n",
+    "    R[i] = R_prime*(1+y_s+y_p) #[Ohm/m] From IEC 60287-1-1 Section 2.1\n",
+    "    print(\"R = %.10E Ohm/m\" % R[i])\n",
+    "    \n",
+    "    # 4.5.2 First iteration & 4.5.3 Next iterations\n",
     "    # 4.5.2.1 Resistance of sheath at operating temperature\n",
     "    R_s[i] = R_s0*(1+alpha_s_20*(theta_s[i]-20)) #[Ohm/m] From IEC 60287-1-1 Section 2.3\n",
     "    print(\"Rs = %.10E Ohm/m\" % R_s[i])\n",
     "    \n",
     "    # 4.5.2.2 Losses caused by circulating currents\n",
-    "    lambda_1_prime = (R_s[i]/R)*(1/(1+(R_s[i]/X)**2)) # From IEC 60287-1-1 Section 2.3.1\n",
+    "    lambda_1_prime = (R_s[i]/R[i])*(1/(1+(R_s[i]/X)**2)) # From IEC 60287-1-1 Section 2.3.1\n",
     "    lambda_1_prime2 = 0\n",
     "    lambda_1[i] = lambda_1_prime + lambda_1_prime2\n",
     "    print(\"\\u03BB1 = %.10f\" % lambda_1[i])\n",
     "    \n",
     "    # 4.5.2.3 Permissible current rating\n",
     "    Delta_theta = theta_c[i] - theta_a\n",
-    "    I[i] = mt.sqrt((Delta_theta-W_d*(0.5*T1+n*(T2+T3+T4)))/(R*T1+n*R*(1+lambda_1[i])*T2+n*R*(1+lambda_1[i]+lambda_2)*(T3+T4))) #[A] From IEC 60287-1-1 Section 1.4.1.1\n",
+    "    I[i] = mt.sqrt((Delta_theta-W_d*(0.5*T1+n*(T2+T3+T4)))/(R[i]*T1+n*R[i]*(1+lambda_1[i])*T2+n*R[i]*(1+lambda_1[i]+lambda_2)*(T3+T4))) #[A] From IEC 60287-1-1 Section 1.4.1.1\n",
     "    print(\"I = %.10f A\" % I[i])\n",
     "    \n",
     "    # 4.5.2.4 Losses in conductor and sheath\n",
-    "    W_c[i] = R*I[i]**2 #[W/m]\n",
+    "    W_c[i] = R[i]*I[i]**2 #[W/m]\n",
     "    W_s[i] = lambda_1[i]*W_c[i] #[W/m]\n",
     "    print(\"Wc = %.10f W/m\\nWs = %.10f W/m\" % (W_c[i], W_s[i]))\n",
     "    \n",
@@ -582,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "5957dc03-af4f-4841-870a-9018df3a14ad",
    "metadata": {},
    "outputs": [
@@ -610,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "b5519496-3d0e-462c-aa1b-7c3ac8e4d9bf",
    "metadata": {},
    "outputs": [
@@ -618,7 +548,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The permissible current rating is equal to   820 A\n"
+      "The permissible current rating of one conductor is equal to   820 A\n"
      ]
     }
    ],
@@ -632,7 +562,7 @@
     "else:\n",
     "    I_rating = int(I[i]/10)*10\n",
     "        \n",
-    "print(\"The permissible current rating is equal to %5d A\" % I_rating)"
+    "print(\"The permissible current rating of one conductor is equal to %5d A\" % I_rating)"
    ]
   }
  ],
